@@ -3,6 +3,8 @@
 - Fixed issue #10919: Input validation of all waiting variables before
   throwing an exception.
 
+- Fixed issue #10968: Allow service objects to suspend the workflow execution.
+
 1.0beta2 - Thursday 31 May 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
